--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,23 @@
-# Configurações de produção
-spring.datasource.url=jdbc:sqlserver://<HOST>:<PORT>;databaseName=<DB_NAME>
+# Datasource para produtos (SQL Server externo)
+spring.produto-datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.produto-datasource.username=hack
+spring.produto-datasource.password=Password23
+spring.produto-datasource.hikari.maximum-pool-size=5
+spring.produto-datasource.hikari.minimum-idle=1
+spring.produto-datasource.hikari.idle-timeout=30000
+spring.produto-datasource.hikari.connection-timeout=30000
+spring.produto-datasource.hikari.max-lifetime=1800000
+
+# Datasource padrão (SQL Server para simulações)
+spring.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.username=<USUARIO>
-spring.datasource.password=<SENHA>
+spring.datasource.username=hack
+spring.datasource.password=Password23
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+# Configurações de produção
 # Outras configs específicas de produção
 
 # EventHub (produção)
@@ -26,8 +38,12 @@ bucket4j.enabled=true
 # Caffeine (exemplo)
 caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 
-# Segurança (exemplo)
+# Seguran?a (exemplo)
 spring.security.user.name=usuario
 spring.security.user.password=senha
 
 spring.cloud.compatibility-verifier.enabled=false
+
+# Zipkin tracing
+spring.zipkin.base-url=http://zipkin:9411/
+spring.sleuth.sampler.probability=1.0
