--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
-# Configura??es gerais
+# Configurações gerais
 # O profile ativo pode ser definido por variável de ambiente, argumento JVM ou Maven
-spring.profiles.active=@spring.profiles.active@
+# spring.profiles.active=@spring.profiles.active@
 
+# Configuração mínima para Hibernate funcionar com SQL Server do desafio
+spring.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+spring.datasource.username=hack
+spring.datasource.password=Password23
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+spring.produto-datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+spring.produto-datasource.username=hack
+spring.produto-datasource.password=Password23
+spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.produto.jpa.hibernate.ddl-auto=update
+spring.produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
