--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,21 +10,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Checkout código
+        uses: actions/checkout@v4
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn -B clean verify
-      - name: Test with Maven
-        run: mvn test
-      - name: Jacoco Coverage Report
-        run: mvn jacoco:report
-      - name: Archive Jacoco Report
-        uses: actions/upload-artifact@v3
+          java-version: '17'
+      - name: Build e Testes
+        run: mvn clean verify --batch-mode
+      - name: Publicar Relatórios de Teste
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: jacoco-report
-          path: target/site/jacoco
+          name: surefire-reports
+          path: target/surefire-reports/
 
