--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-# Datasource para produtos (SQL Server externo)
+# Datasource para produtos (SQL Server externo - apenas leitura)
 spring.produto-datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
 spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.produto-datasource.username=hack
@@ -9,11 +9,12 @@ spring.produto-datasource.hikari.idle-timeout=30000
 spring.produto-datasource.hikari.connection-timeout=30000
 spring.produto-datasource.hikari.max-lifetime=1800000
 
-# Datasource padrão (SQL Server para simulações)
-spring.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+# Datasource padrão (SQL Server para simulações realizadas)
+# ATENÇÃO: Configure este datasource para um banco SQL Server exclusivo para gravação das simulações (NÃO use o mesmo banco de produtos)
+spring.datasource.url=${SIMULACAO_DB_URL}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.username=hack
-spring.datasource.password=Password23
+spring.datasource.username=${SIMULACAO_DB_USERNAME}
+spring.datasource.password=${SIMULACAO_DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 
