--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
-spring.produto-datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
-spring.produto-datasource.username=hack
-spring.produto-datasource.password=Password23
-spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.produto.jpa.hibernate.ddl-auto=update
-spring.produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+produto.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+produto.datasource.username=hack
+produto.datasource.password=Password23
+produto.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+produto.jpa.hibernate.ddl-auto=update
+produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
