--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.cloud.vault.enabled=false
+spring.produto-datasource.url=jdbc:h2:mem:testdb-produto;DB_CLOSE_DELAY=-1
+spring.produto-datasource.driver-class-name=org.h2.Driver
+spring.produto-datasource.username=sa
+spring.produto-datasource.password=
+spring.produto.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.produto.jpa.hibernate.ddl-auto=create-drop
