Adiciona configurações de datasources e reorganiza repositórios de auditoria

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,32 +1,46 @@
+# Datasource para produtos (SQL Server externo - apenas leitura)
+spring.produto-datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.produto-datasource.username=hack
+spring.produto-datasource.password=Password23
+spring.produto-datasource.hikari.maximum-pool-size=5
+spring.produto-datasource.hikari.minimum-idle=1
+spring.produto-datasource.hikari.idle-timeout=30000
+spring.produto-datasource.hikari.connection-timeout=30000
+spring.produto-datasource.hikari.max-lifetime=1800000
+
+# Datasource padrão (H2 local para simulações realizadas)
 spring.datasource.url=jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-# Outras configs espec?ficas de dev
 
-# EventHub (simulado/local)
-eventhub.connection-string=Endpoint=sb://localhost/;SharedAccessKeyName=dev;SharedAccessKey=devkey
-eventhub.name=dev-eventhub
+# EventHub (real)
+eventhub.connection-string=Endpoint=sb://eventhack.servicebus.windows.net/;SharedAccessKeyName=hack;SharedAccessKey=HeHeVaVqyVkntO2FnjQcs2Ilh/4MUDo4y+AEhKp8z+g=;EntityPath=simulacoes
+eventhub.name=simulacoes
 
 # Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 
-# Resilience4j (exemplo)
+# Resilience4j (igual prod)
 resilience4j.circuitbreaker.instances.default.register-health-indicator=true
-resilience4j.circuitbreaker.instances.default.sliding-window-size=10
+resilience4j.circuitbreaker.instances.default.sliding-window-size=100
 resilience4j.circuitbreaker.instances.default.failure-rate-threshold=50
 
-# Bucket4j (exemplo)
+# Bucket4j (igual prod)
 bucket4j.enabled=true
 
-# Caffeine (exemplo)
-caffeine.spec=maximumSize=100,expireAfterWrite=5m
+# Caffeine (igual prod)
+caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 
-# Segurança (exemplo)
+# Segurança (igual prod)
 spring.security.user.name=usuario
 spring.security.user.password=senha
 
 spring.cloud.compatibility-verifier.enabled=false
+
+# Zipkin tracing (opcional para dev)
+spring.zipkin.base-url=http://zipkin:9411/
+spring.sleuth.sampler.probability=1.0
