--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# Configurações gerais
-# O profile ativo pode ser definido por variável de ambiente, argumento JVM ou Maven
+# Configura??es gerais
+# O profile ativo pode ser definido por vari?vel de ambiente, argumento JVM ou Maven
 # spring.profiles.active=@spring.profiles.active@
 
-# Configuração mínima para Hibernate funcionar com SQL Server do desafio
+# Configura??o m?nima para Hibernate funcionar com SQL Server do desafio
 spring.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
 spring.datasource.username=hack
 spring.datasource.password=Password23
@@ -16,3 +16,5 @@ produto.datasource.password=Password23
 produto.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 produto.jpa.hibernate.ddl-auto=update
 produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+spring.cloud.vault.enabled=false
