--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
@@ -10,5 +11,8 @@ spring.produto-datasource.url=jdbc:h2:mem:testdb-produto;DB_CLOSE_DELAY=-1
 spring.produto-datasource.driver-class-name=org.h2.Driver
 spring.produto-datasource.username=sa
 spring.produto-datasource.password=
-spring.produto.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.produto.jpa.hibernate.ddl-auto=create-drop
+spring.produto-datasource.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.produto-datasource.jpa.hibernate.ddl-auto=create-drop
+spring.produto-datasource.jpa.show-sql=true
+spring.produto-datasource.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.produto-datasource.hikari.maximum-pool-size=5
