--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,6 +20,7 @@ spring.jpa.hibernate.ddl-auto=update
 # EventHub (real)
 eventhub.connection-string=Endpoint=sb://eventhack.servicebus.windows.net/;SharedAccessKeyName=hack;SharedAccessKey=HeHeVaVqyVkntO2FnjQcs2Ilh/4MUDo4y+AEhKp8z+g=;EntityPath=simulacoes
 eventhub.name=simulacoes
+eventhub.queue=eventhub-simulacoes-dev
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
