--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# Configurações de teste
+# Configura??es de teste
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -6,7 +6,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-# Outras configs específicas de teste
+# Outras configs espec?ficas de teste
 
 # EventHub (simulado/teste)
 eventhub.connection-string=Endpoint=sb://localhost/;SharedAccessKeyName=test;SharedAccessKey=testkey
@@ -21,12 +21,12 @@ resilience4j.circuitbreaker.instances.default.sliding-window-size=10
 resilience4j.circuitbreaker.instances.default.failure-rate-threshold=50
 
 # Bucket4j (exemplo)
-bucket4j.enabled=true
+bucket4j.enabled=false
 
 # Caffeine (exemplo)
 caffeine.spec=maximumSize=100,expireAfterWrite=5m
 
-# Segurança (exemplo)
+# Seguran?a (exemplo)
 spring.security.user.name=usuario
 spring.security.user.password=senha
 
