--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ produto.jpa.hibernate.ddl-auto=update
 produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 spring.cloud.vault.enabled=false
+
+eventhub.queue=eventhub-simulacoes
