--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,3 +16,4 @@ spring.produto-datasource.jpa.hibernate.ddl-auto=create-drop
 spring.produto-datasource.jpa.show-sql=true
 spring.produto-datasource.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.produto-datasource.hikari.maximum-pool-size=5
+spring.profiles.active=test
