--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.produto-datasource.hikari.idle-timeout=30000
 spring.produto-datasource.hikari.connection-timeout=30000
 spring.produto-datasource.hikari.max-lifetime=1800000
 
-# Datasource padrão (H2 local para simulações realizadas)
+# Datasource padr?o (H2 local para simula??es realizadas)
 spring.datasource.url=jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -25,6 +25,10 @@ eventhub.queue=eventhub-simulacoes-dev
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 
+# Desabilita health check do banco em dev
+management.health.db.enabled=false
+management.health.datasource.enabled=false
+
 # Resilience4j (igual prod)
 resilience4j.circuitbreaker.instances.default.register-health-indicator=true
 resilience4j.circuitbreaker.instances.default.sliding-window-size=100
@@ -36,7 +40,7 @@ bucket4j.enabled=true
 # Caffeine (igual prod)
 caffeine.spec=maximumSize=1000,expireAfterWrite=10m
 
-# Segurança (igual prod)
+# Seguran?a (igual prod)
 spring.security.user.name=usuario
 spring.security.user.password=senha
 
