--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -15,6 +15,10 @@ eventhub.name=test-eventhub
 # Actuator
 management.endpoints.web.exposure.include=*
 
+# Desabilita health check do banco em test
+management.health.db.enabled=false
+management.health.datasource.enabled=false
+
 # Resilience4j (exemplo)
 resilience4j.circuitbreaker.instances.default.register-health-indicator=true
 resilience4j.circuitbreaker.instances.default.sliding-window-size=10
