--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,53 @@
-# Configura??es gerais
-# O profile ativo pode ser definido por vari?vel de ambiente, argumento JVM ou Maven
-# spring.profiles.active=@spring.profiles.active@
+spring.produto-datasource.jdbc-url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
+spring.produto-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.produto-datasource.username=hack
+spring.produto-datasource.password=Password23
+spring.produto-datasource.hikari.maximum-pool-size=10
+spring.produto-datasource.hikari.minimum-idle=1
+spring.produto-datasource.hikari.idle-timeout=30000
+spring.produto-datasource.hikari.connection-timeout=30000
+spring.produto-datasource.hikari.max-lifetime=1800000
 
-# Configura??o m?nima para Hibernate funcionar com SQL Server do desafio
-spring.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
-spring.datasource.username=hack
-spring.datasource.password=Password23
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# Datasource padr?o (H2 local para simula??es realizadas)
+spring.datasource.jdbc-url=jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.sql.init.mode=always
 
-produto.datasource.url=jdbc:sqlserver://dbhackathon.database.windows.net:1433;databaseName=hack
-produto.datasource.username=hack
-produto.datasource.password=Password23
-produto.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-produto.jpa.hibernate.ddl-auto=update
-produto.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+# EventHub (real)
+eventhub.connection-string=Endpoint=sb://eventhack.servicebus.windows.net/;SharedAccessKeyName=hack;SharedAccessKey=HeHeVaVqyVkntO2FnjQcs2Ilh/4MUDo4y+AEhKp8z+g=;EntityPath=simulacoes
+eventhub.name=simulacoes
+eventhub.queue=eventhub-simulacoes-dev
 
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+
+# Desabilita health check do banco em dev
+management.health.db.enabled=false
+management.health.datasource.enabled=false
+
+# Resilience4j (igual prod)
+resilience4j.circuitbreaker.instances.default.register-health-indicator=true
+resilience4j.circuitbreaker.instances.default.sliding-window-size=100
+resilience4j.circuitbreaker.instances.default.failure-rate-threshold=50
+
+# Bucket4j (igual prod)
+bucket4j.enabled=true
+
+# Caffeine (igual prod)
+caffeine.spec=maximumSize=1000,expireAfterWrite=10m
+
+# Seguran?a (igual prod)
+spring.security.user.name=usuario
+spring.security.user.password=senha
+
+spring.cloud.compatibility-verifier.enabled=false
 spring.cloud.vault.enabled=false
 
-eventhub.queue=eventhub-simulacoes
+# Zipkin tracing (opcional para dev)
+spring.zipkin.base-url=http://zipkin:9411/
+spring.sleuth.sampler.probability=1.0
+spring.cloud.vault.enabled=false
